--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
             <version>5.2.1</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.11</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
